# evt-air-risk-aiaa-scitech-2026

./: CONTRIBUTING.md  README.md  RunEVTAnalysis.ipynb  cpa_operations_select.csv  evt_analysis.py  pyproject.toml
